[package]
name = "kak-popup"
description = "kakoune popups"
version = "0.5.1"
edition = "2021"
license = "CC0-1.0"
repository = "https://github.com/enricozb/tabs.kak"
readme = "readme.md"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
daemonize = "0.5.0"
futures = "0.3.28"
nix = "0.26.2"
parking_lot = "0.12.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
strum = { version = "0.24.1", features = ["derive"] }
tempfile = "3.5.0"
tokio = { version = "1.28.2", features = ["full"] }
